<resources>
    <string name="app_name">Contacts</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="search">search</string>
    <string name="add_contact">Add contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">phone number</string>
    <string name="clear">Clear</string>
    <string name="register">Register</string>
    <string name="close">Close</string>
    <string name="exclude">Exclude</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="send_email">Send email</string>
    <string name="contacts_list">Contacts List</string>
    <string name="register_contact">Register Contact</string>
</resources>