<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_green"
    android:orientation="vertical"
    tools:context=".ui.fragments.RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNameA"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_green"
            android:hint="@string/name"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmailA"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_green"
                android:hint="@string/email"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCelA"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputCel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_green"
                android:hint="@string/phone_number"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_update_button"
                style="@style/button_main_activity"
                android:text="@string/register"
                />

            <Button
                android:id="@+id/clear_delete_button"
                style="@style/button_main_activity"
                android:text="@string/cancel" />
        </LinearLayout>
</LinearLayout>
